# fzxx

./: CHANGELOG.md  CMakeLists.txt  README.md
include/fzxx/: match.h  tty.h  tty_interface.h
src/: bonus.h  choices.cpp  choices.h  fzy.cpp  match.cpp  options.cpp  options.h  tty.cpp  tty.h  tty_interface.cpp  tty_interface.h
test/: fzytest.cpp  test_choices.cpp  test_match.cpp  test_properties.cpp
test/acceptance/: acceptance_test.rb
